# sentinel-agent-websocket-inspector

./: Cargo.toml  README.md
src/: config.rs  lib.rs  main.rs  ratelimit.rs
src/inspection/: content.rs  mod.rs  patterns.rs
src/validation/: json_schema.rs  mod.rs  msgpack.rs
tests/: integration.rs
